--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -446,6 +446,23 @@
   number = {1}
 }
 
+@article{emswellerSeedRainDisturbance2018,
+  title = {Seed {{Rain}} and {{Disturbance Impact Recruitment}} of {{Invasive Plants}} in {{Upland Forest}}},
+  author = {Emsweller, Lauren N. and Gorchov, David L. and Zhang, Qi and Driscoll, Angela G. and Hughes, Michael R.},
+  year = {2018},
+  month = jun,
+  volume = {11},
+  pages = {69--81},
+  publisher = {{Cambridge University Press}},
+  issn = {1939-7291, 1939-747X},
+  doi = {10.1017/inp.2018.14},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Emsweller et al_2018_Seed Rain and Disturbance Impact Recruitment of Invasive Plants in Upland Forest.pdf},
+  journal = {Invasive Plant Science and Management},
+  keywords = {dispersal,disturbance,invasion},
+  language = {en},
+  number = {2}
+}
+
 @article{engelmarkEcologicalEffectsManagement2001,
   title = {Ecological Effects and Management Aspects of an Exotic Tree Species: The Case of Lodgepole Pine in {{Sweden}}},
   shorttitle = {Ecological Effects and Management Aspects of an Exotic Tree Species},
@@ -615,6 +632,22 @@
   keywords = {conservation,forest,fragmentation,metapopulation},
   language = {en},
   number = {3}
+}
+
+@article{holleEcologicalResistanceBiological2005,
+  title = {Ecological {{Resistance}} to {{Biological Invasion Overwhelmed}} by {{Propagule Pressure}}},
+  author = {Holle, Betsy Von and Simberloff, Daniel},
+  year = {2005},
+  volume = {86},
+  pages = {3212--3218},
+  issn = {1939-9170},
+  doi = {10.1890/05-0427},
+  copyright = {\textcopyright{} 2005 by the Ecological Society of America},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Holle_Simberloff_2005_Ecological Resistance to Biological Invasion Overwhelmed by Propagule Pressure.pdf},
+  journal = {Ecology},
+  keywords = {invasibility,invasion},
+  language = {en},
+  number = {12}
 }
 
 @article{hornTurbSeedModelWind2012,
@@ -916,6 +949,23 @@
   number = {3}
 }
 
+@article{pauchardPineInvasionsTreeless2016,
+  title = {Pine Invasions in Treeless Environments: Dispersal Overruns Microsite Heterogeneity},
+  shorttitle = {Pine Invasions in Treeless Environments},
+  author = {Pauchard, An{\'i}bal and Escudero, Adri{\'a}n and Garc{\'i}a, Rafael A. and de la Cruz, Marcelino and Langdon, B{\'a}rbara and Cavieres, Lohengrin A. and Esquivel, Jocelyn},
+  year = {2016},
+  volume = {6},
+  pages = {447--459},
+  issn = {2045-7758},
+  doi = {10.1002/ece3.1877},
+  copyright = {\textcopyright{} 2016 The Authors. Ecology and Evolution  published by John Wiley \& Sons Ltd.},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Pauchard et al_2016_Pine invasions in treeless environments.pdf},
+  journal = {Ecology and Evolution},
+  keywords = {conifer,invasion,point pattern,recruitment},
+  language = {en},
+  number = {2}
+}
+
 @article{prestoSembrafuruPinusCembra2013,
   title = {Sembrafuru {{Pinus}} Cembra Invaderer Byn\ae rt Kulturlandskap. {{Eksempel}} Fra {{Ladehalv\o ya}}, {{Trondheim}}},
   author = {Prest{\o}, Tommy and Hagen, Dagmar and Vange, Vibekke},
@@ -993,6 +1043,22 @@
   number = {2}
 }
 
+@article{richardsonPineInvasionsSouthern1994,
+  title = {Pine {{Invasions}} in the {{Southern Hemisphere}}: {{Determinants}} of {{Spread}} and {{Invadability}}},
+  shorttitle = {Pine {{Invasions}} in the {{Southern Hemisphere}}},
+  author = {Richardson, D. M. and Williams, P. A. and Hobbs, R. J.},
+  year = {1994},
+  volume = {21},
+  pages = {511--527},
+  publisher = {{Wiley}},
+  issn = {0305-0270},
+  doi = {10.2307/2845655},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Richardson et al. - 1994 - Pine Invasions in the Southern Hemisphere Determi.pdf},
+  journal = {Journal of Biogeography},
+  keywords = {invasion},
+  number = {5}
+}
+
 @phdthesis{richterSpredningAvSitkagran2015,
   title = {Spredning Av Sitkagran {{Picea}} Sitchensis P\aa{} {{Stadlandet}}, {{Selje}} Kommune},
   author = {Richter, L M},
@@ -1001,6 +1067,23 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Richter_2015_Spredning av sitkagran Picea sitchensis på Stadlandet, Selje kommune.pdf},
   keywords = {management,sitka spruce},
   school = {H\o gskolen i Nord- Tr\o ndelag}
+}
+
+@article{rougetInferringProcessPattern2003,
+  title = {Inferring {{Process}} from {{Pattern}} in {{Plant Invasions}}: {{A Semimechanistic}}                     {{Model Incorporating Propagule Pressure}} and {{Environmental}}                     {{Factors}}.},
+  shorttitle = {Inferring {{Process}} from {{Pattern}} in {{Plant Invasions}}},
+  author = {Rouget, Mathieu and Richardson, David M.},
+  year = {2003},
+  month = dec,
+  volume = {162},
+  pages = {713--724},
+  publisher = {{The University of Chicago Press}},
+  issn = {0003-0147},
+  doi = {10.1086/379204},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Rouget and Richardson - 2003 - Inferring Process from Pattern in Plant Invasions.pdf},
+  journal = {The American Naturalist},
+  keywords = {invasion,To read},
+  number = {6}
 }
 
 @article{rundelTreeInvasionsTreeless2014,
